modified:   ModManager/scripts/minecraft.sh